--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,29 @@
-*{
+* {
   box-sizing: border-box;
 }
-.center{
+
+body {
+  margin: 0;
+}
+
+.center {
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.slide-in-left-enter {
+  transform: translateX(-100%);
+}
+
+.slide-in-left-enter-active {
+  transform: translateX(0);
+  opacity: 1;
+  transition: all 200ms;
+}
+
+.slide-in-left-exit {
+  transform: translateX(0%);
+  opacity: 1;
 }
