--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import "~leaflet/dist/leaflet.css";
+
 * {
   box-sizing: border-box;
 }
@@ -27,4 +29,9 @@ body {
 .slide-in-left-exit {
   transform: translateX(0%);
   opacity: 1;
+}
+
+.leaflet-container {
+  width: 100%;
+  height: 100%;
 }
