--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
+/* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700;800&display=swap");
 @import "~leaflet/dist/leaflet.css";
 
 * {
   box-sizing: border-box;
+  /* font-family: "Poppins", sans-serif; */
+  font-family: "Noto Sans", sans-serif;
 }
 
 body {
